--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,27 @@
-.App {
-  min-height: 100vh;
-  background-image: linear-gradient(to top, #ff9a9e 0%, #fecfef 99%, #fecfef 100%);
+.parent {
+  width: 100%;
+  height: 100vh;
+  background-color: #00FFF6;
+  color: #0014FF;
 }
 
-.search-form {
-  min-height: 10vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.search-bar{
-  width: 50%;
-  border: none;
-  padding: 10px;
-}
-
-.search-button{
-  background: #ddbe58;
-  border: none;
-  padding: 10px 20px;
-  color: #584710;
-  font-weight: 600;
-  cursor: pointer;
-}
-
-.recipes{
+.recipes {
+  width: 100%;
+  height: 90vh;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  gap: 25px;
+  overflow-y: scroll;
+}
+
+@media only screen and (max-width:600px) {
+
+  .recipes {
+    flex-wrap: unset;
+    flex-direction: column;
+    gap: unset;
+    overflow-y: scroll;
+  }
 }
